Full fix for Bug #1106: Home screen is broken on phone. There was some old CSS hanging around causing problems.

--- a/YoFi.AspNet/wwwroot/css/site.css
+++ b/YoFi.AspNet/wwwroot/css/site.css
@@ -6,18 +6,7 @@
     padding-right: 15px;
 }
 
-/* Carousel */
-.carousel-caption p {
-    font-size: 20px;
-    line-height: 1.4;
-}
-
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"] {
-    width: 100%;
-}
-
-.form-group {
+up {
     margin-bottom: 20px;
 }
 
@@ -81,14 +70,6 @@
 
 .pivot-table tr.superhead {
     background-color: #b0c4de7a;
-}
-
-/* Hide/rearrange for smaller screens */
-@media screen and (max-width: 767px) {
-    /* Hide captions */
-    .carousel-caption {
-        display: none;
-    }
 }
 
 .bd-footer a {
@@ -165,14 +146,27 @@ body.iscarousel {
     height: 32rem;
 }
 
-    .carousel-item > img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        min-width: 100%;
-        height: 32rem;
-    }
+.carousel-item > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    height: 32rem;
+}
 
+.bd-placeholder-img {
+    font-size: 1.125rem;
+    text-anchor: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+}
+
+@media (min-width: 768px) {
+    .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+    }
+}
 
 /* MARKETING CONTENT
 -------------------------------------------------- */
